# example_cmake_configure_file

./: CMakeLists.txt  README.md  testcmake.cpp
internal/: config.h.in
